--- a/data/.gitignore
+++ b/data/.gitignore
@@ -4,3 +4,6 @@
 /processed_train_data.csv
 /processed_test_data.csv
 /MrBeast_youtube_stats.csv
+/mrbeast_pipeline.pkl
+/processed_mrbeast_train.csv
+/processed_mrbeast_test.csv
