--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,11 +1,13 @@
 stages:
   prepare:
-    cmd: python src/create_features.py
+    cmd: python src/preprocessing.py
     deps:
-      - data/adult.data
-      - data/adult.test
-      - src/create_features.py
+      - data/MrBeast_youtube_stats.csv
+      - src/preprocessing.py
     outs:
-      - data/pipeline.pkl
-      - data/processed_train_data.csv
-      - data/processed_test_data.csv
+      - data/mrbeast_pipeline.pkl
+      - data/processed_mrbeast_train.csv
+      - data/processed_mrbeast_test.csv
+    params:
+      - split.test_size
+      - split.random_state
